--- a/src/app/projeto/projeto1.component.html
+++ b/src/app/projeto/projeto1.component.html
@@ -369,37 +369,37 @@
             <div *ngIf="arquivos[i].tipo == 'Codigo'">
               <div class="col-md-2">
                 <div class="relative">
-                  <a href="#0" target="__blank"><img [src]="viewCode" title={{arquivo.titulo}} style="max-width: 120px;"
+                  <a href="javascript:void(0);" target="__blank"><img [src]="viewCode" title={{arquivo.titulo}} style="max-width: 120px;"
                       (click)="urlDestino(arquivo.caminho)"></a>
                   <div class="absolute">
-                    <a href="#1"><img [src]="delCode" title="Excluir" style="max-width: 25px;"
-                        (click)="deleteArquivo(i)"></a>
+                    <a href="javascript:void(1);"><img [src]="delCode" title="Excluir" style="max-width: 25px;"
+                        (click)="deleteArquivo(i)" (click)="limpar()"></a>
                   </div>
                 </div>
               </div>
             </div>
           </div>
           <div class="relative" *ngIf="arquivos.length > 0">
-            <a href="#0"><img [src]="addCode" title=Adicionar style="max-width: 120px;" (click)="limpar()"></a>
+            <a href="javascript:void(0);"><img [src]="addCode" title=Adicionar style="max-width: 120px;" (click)="limpar()"></a>
           </div>
         </div>
       </div>
-        <div class="modal-footer">
-          <button class="btn btn-danger" id="btnSalvar" data-toggle="modal" data-dismiss="modal"
-            data-target="#modalMsg2" [disabled]="!arquivos.length > 0">SALVAR</button>
-          <button class="btn btn-danger" id="btnMaisRecursos" data-dismiss="modal" data-toggle="modal"
-            data-target="#modalResources">+ RECURSOS</button>
-        </div>
+      <div class="modal-footer">
+        <button class="btn btn-danger" id="btnSalvar" data-toggle="modal" data-dismiss="modal"
+          data-target="#modalMsg2" [disabled]="!arquivos.length > 0">SALVAR</button>
+        <button class="btn btn-danger" id="btnMaisRecursos" data-dismiss="modal" data-toggle="modal"
+          data-target="#modalResources">+ RECURSOS</button>
       </div>
     </div>
   </div>
+</div>
 
 <div class="modal fade" id="modalMidias" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
   aria-hidden="true" data-backdrop="static" data-keyboard="false">
   <div class="modal-dialog modal-dialog-centered modal-lg" role="document">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalLabel">CADASTRO DE MIDIA</h5>
+        <h5 class="modal-title" id="exampleModalLabel">CADASTRO DE MÍDIA</h5>
         <button type="button" class="close" data-dismiss="modal" data-toggle="modal" data-target="#modalResources"
           aria-label="Close">
           <span aria-hidden="true" id="close-modal-resources" style="font-size: 15px">X</span>
@@ -424,55 +424,52 @@
         <div class="input-group mb-3">
           <input type="text" class="form-control" id="basic-url" aria-describedby="basic-addon3" [(ngModel)]="model.caminho"> 
           <button type="button" class="btn btn-success video-btn" data-src="http://www.youtube.com/embed/M7lc1UVf-VE" 
-          (click)="addArquivo('Midias')">INCORPORAR</button>
-        </div>
-        <div class="container">
-          <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
-            aria-hidden="true">
-            <div class="modal-dialog" role="document">
-              <div class="modal-content">
-                <div class="modal-body">
-                  <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                    <span aria-hidden="true">&times;</span>
-                  </button>
-                  <div class="embed-responsive embed-responsive-16by9">
-                    <iframe class="embed-responsive-item" src="" id="video" allowscriptaccess="always"
-                      allow="autoplay"></iframe>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
+          (click)="addArquivo('Midias')" (click)="limpar()">INCORPORAR</button>
         </div>
         <div class="row justify-content-center">
-            <div *ngFor='let arquivo of arquivos; let i = index'>
-              <div *ngIf="arquivos[i].tipo == 'Midias'">
-                <div class="col-md-2">
-                  <div class="relative-midia">
-                    <a href="#0"><img [src]="viewMidia" title={{arquivo.titulo}} style="max-width: 160px;"
-                      class="video-btn" data-toggle="modal"
-                      data-src="http://www.youtube.com/embed/M7lc1UVf-VE" data-target="#myModal"></a>
-                    <div class="absolute-midia">
-                      <a href="#1"><img [src]="delCode" title="Excluir" style="max-width: 25px;"
-                          (click)="deleteArquivo(i)"></a>
-                    </div>
+          <div *ngFor='let arquivo of arquivos; let i = index'>
+            <div *ngIf="arquivos[i].tipo == 'Midias'">
+              <div class="col-md-2">
+                <div class="relative-midia">
+                  <a href="javascript:void(0);"><img [src]="viewMidia" title={{arquivo.titulo}} style="max-width: 160px;"
+                    class="video-btn" data-toggle="modal"
+                    data-src="http://www.youtube.com/embed/M7lc1UVf-VE" data-target="#myModal"></a>
+                  <div class="absolute-midia">
+                    <a href="javascript:void(1);"><img [src]="delCode" title="Excluir" style="max-width: 25px;"
+                      (click)="deleteArquivo(i)"></a>
                   </div>
                 </div>
               </div>
             </div>
-            <div class="relative" *ngIf="arquivos.length > 0">
-              <a href="#0"><img [src]="addCode" title=Adicionar style="max-width: 120px;" (click)="limpar()"></a>
-            </div>
           </div>
+          <div class="relative" *ngIf="arquivos.length > 0">
+            <a href="javascript:void(0);"><img [src]="addCode" title=Adicionar style="max-width: 120px;" (click)="limpar()"></a>
+          </div>
+        </div>
       </div>
       <div class="modal-footer">
-        <div class="mr-auto">
-          <button class="btn btn-danger" data-toggle="modal" data-dismiss="modal"
-            data-target="#modalMsg1">SALVAR</button>
+        <button class="btn btn-danger" data-toggle="modal" data-dismiss="modal" id="btnSalvar"
+          data-target="#modalMsg1">SALVAR</button>
+        <button class="btn btn-danger" data-dismiss="modal" data-toggle="modal" data-target="#modalResources"
+          id="btnMaisRecursos">+ RECURSOS</button>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="container">
+  <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+    aria-hidden="true" data-backdrop="static" data-keyboard="false">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+        <div class="modal-body">
+          <div class="embed-responsive embed-responsive-16by9">
+            <iframe class="embed-responsive-item" src="" id="video" allowscriptaccess="always"
+              allow="autoplay"></iframe>
+          </div>
         </div>
-        <div>
-          <button class="btn btn-danger" data-dismiss="modal" data-toggle="modal" data-target="#modalResources">
-            + RECURSOS</button>
+        <div class="modal-footer justify-content-center">
+          <button type="button" class="btn btn-dark" data-dismiss="modal">VOLTAR</button>
         </div>
       </div>
     </div>
