--- a/src/app/projeto/projeto1.component.css
+++ b/src/app/projeto/projeto1.component.css
@@ -70,7 +70,7 @@ body {margin:2rem;}
     border-radius: 30px;
   }
 
-  #btnSalvar{
+  .btnSalvar{
     width: 140px;
     margin-right: 20%;
       font-size: 15px;
@@ -157,3 +157,27 @@ div.absolute-midia {
   width: 25px;
   height: 45px;
 }
+
+@-webkit-keyframes fadeIn {
+  0% { opacity: 0; }
+  100% { opacity: 1; } 
+  }
+  @-moz-keyframes fadeIn {
+  0% { opacity: 0;}
+  100% { opacity: 1; }
+  }
+  @-o-keyframes fadeIn {
+  0% { opacity: 0; }
+  100% { opacity: 1; }
+  }
+  @keyframes fadeIn {
+  0% { opacity: 0; }
+  100% { opacity: 1; }
+  }
+
+.fadeIn {
+  -webkit-animation: fadeIn 1s ease-in-out;
+  -moz-animation: fadeIn 1s ease-in-out;
+  -o-animation: fadeIn 1s ease-in-out;
+  animation: fadeIn 1s ease-in-out;
+  }
